# inline-julia

./: LICENSE  Paths_inline_julia.hs  README.md  inline-julia.cabal
cbits/: internal.c
julia/: HaskellGC.jl  gc.jl
src/Language/Inline/: Julia.hs
src/Language/Inline/Julia/: InternalDynamic.hs
src/Language/Julia/: Inline.hs
src/Language/Julia/Inline/: InternalDynamic.hs  Marshal.hs  Quote.hs
test/: properties.hs
