name:                inline-julia
version:             0.1.0.0
synopsis:            Write inline Julia code
license:             BSD3
license-file:        LICENSE
author:              Tristan Konolige
maintainer:          tristan.konolige@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
data-files:          HaskellGC.jl
data-dir:            julia
cabal-version:       >=1.10

library
  exposed-modules:     Language.Julia.Inline
                     , Language.Julia.Inline.InternalDynamic
                     , Language.Julia.Inline.Marshal
                     , Language.Julia.Inline.Quote
  other-modules:       Paths_inline_julia
  c-sources:           cbits/internal.c
  cc-options:          -fPIC
  build-depends:       base >=4.8 && <4.9
                     , libffi
                     , unix
                     , template-haskell
                     , megaparsec
                     , haskell-src-meta
                     , vector
                     , bytestring
                     , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-tools:         c2hs

test-suite properties
  type:                exitcode-stdio-1.0
  main-is:             properties.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base
                     , inline-julia
                     , tasty
                     , tasty-quickcheck
                     , QuickCheck
                     , quickcheck-instances
                     , mono-traversable
                     , vector
